--- a/ThreeT/index.html
+++ b/ThreeT/index.html
@@ -63,7 +63,7 @@
                             <a class="dropdown-item" href="#">Đăng nhập</a>
 
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="newEmptyPHP.php">Đăng ký</a>
+                            <a class="dropdown-item" href="registration.php">Đăng ký</a>
                         </div>
                     </li>
                 </ul>
